Added recipe files with initial template

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Coffee Recipes</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
+    <a href="recipes/pour-over.html">Pour Over coffee</a>
     
 </body>
 </html>
