--- a/recipes/french-press.html
+++ b/recipes/french-press.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Pour over</title>
+        <title>French Press</title>
     </head>
     <body>
-        <h1>Pour Over</h1>
+        <h1>French Press</h1>
     </body>
 
 </html>
