Added respective images to each recipe file

--- a/recipes/french-press.html
+++ b/recipes/french-press.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>French Press</h1>
+        <img src="../images/french-press.jpeg" alt="French Press coffe">
     </body>
 
 </html>
