--- a/recipes/pour-over.html
+++ b/recipes/pour-over.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Pour Over</h1>
+        <img src="../images/pour-over.png" alt="pour over coffee">
     </body>
 
 </html>
