--- a/recipes/espress.html
+++ b/recipes/espress.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Espresso</h1>
+        <img src="../images/espresso.jpeg" alt="espresso coffee">
     </body>
 
 </html>
