Updated pour-over.html with description on recipe

--- a/recipes/pour-over.html
+++ b/recipes/pour-over.html
@@ -7,6 +7,28 @@
     <body>
         <h1>Pour Over</h1>
         <img src="../images/pour-over.png" alt="pour over coffee">
+        <h2>Pour over coffee offers birghter cups of coffee, with minimal body</h2>
+        <p>This recipe will explain how to make a cup of pour over coffee.</p>
+        <ul>Ingredients and equipment needed:
+            <li>20 Grams of coffee (pre grounded for pour over)</li>
+            <li>300 ml of water</li>
+            <li>Kettle for water</li>
+            <li>Pour over tool such as v60 hario</li>
+            <li>Carafe</li>
+            <li>Paper filter</li>
+            <li>Scale</li>
+        </ul>
+        <ol>Steps:
+            <li>Fill kettle with plenty of water, more than 300 ml, place on stove and heat until boiling</li>
+            <li>Place filter in pour over tool, and place pour over tool on top of carafe</li>
+            <li>Once water is heated, pour hot water into the pour over tool, saturate filter</li>
+            <li>Dump water out of carafe, and put the pour over tool back onto carafe</li>
+            <li>Place ground coffee in pour over</li>
+            <li>Place everything onto scale, and zero scale out</li>
+            <li>Pour 50 ml of water into coffee bed, let sit for 30 seconds (This is called the bloom, it degases the coffee</li>
+            <li>Slowly pour in remainder of water (250 ml)</li>
+            <li>Once water is filtered through, your drink is ready, pour coffee into a mug</li>
+        </ol>
     </body>
 
 </html>
