Added recipe links to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pour-over.html">Pour Over coffee</a>
-    
+    <ul>
+        <li><a href="recipes/pour-over.html">Pour Over coffee</a></li>
+        <li><a href="recipes/french-press.html">French Press coffee</a></li>
+        <li><a href="recipes/espress.html">Espresso</a></li>
+    </ul>
 </body>
 </html>
