Updated espress and french-press files with recipe information

--- a/recipes/espress.html
+++ b/recipes/espress.html
@@ -7,6 +7,17 @@
     <body>
         <h1>Espresso</h1>
         <img src="../images/espresso.jpeg" alt="espresso coffee">
+        <h2>Espresso has strong flavor, best paired with steamed milk</h2>
+        <p>Espresso is a versatile way of doing coffee, just because the different drinks you can make with it, such as lattee, cappucino, flat white, cortado, etc</p>
+        <p>Espresso is also the hardest to make, you would need and expensive grinder and espresso machine to make quality espresso</p>
+        <ul>Ingredients
+            <li>Money</li>
+            <li>Car</li>
+        </ul>
+        <ol>Steps:
+            <li>Get in car, drive to nearest coffee shop</li>
+            <li>Use your own money to buy your favorite espresso drink</li>
+        </ol>
     </body>
 
 </html>
