--- a/recipes/french-press.html
+++ b/recipes/french-press.html
@@ -7,6 +7,21 @@
     <body>
         <h1>French Press</h1>
         <img src="../images/french-press.jpeg" alt="French Press coffe">
+        <h2>French press offers more body to coffee, while sacrificing brightness</h2>
+        <p>This recipe explains how to make french press coffee. This is one of the more accessible ways to make coffee</p>
+        <ul>Ingredients:
+            <li>30 grams of coffee</li>
+            <li>500 ml of water</li>
+            <li>Kettle</li>
+            <li>French Press</li>
+        </ul>
+        <ol>Steps:
+            <li>Boil 500 ml of water</li>
+            <li>Place coffee in french presss</li>
+            <li>pour water into french press</li>
+            <li>Let sit for 4 minutes</li>
+            <li>Push the french press plunger down, pour coffee into mug, ready to drink!</li>
+        </ol>
     </body>
 
 </html>
