Updated bugs regarding ordered and unordered list

--- a/recipes/pour-over.html
+++ b/recipes/pour-over.html
@@ -9,7 +9,8 @@
         <img src="../images/pour-over.png" alt="pour over coffee">
         <h2>Pour over coffee offers birghter cups of coffee, with minimal body</h2>
         <p>This recipe will explain how to make a cup of pour over coffee.</p>
-        <ul>Ingredients and equipment needed:
+        <h4>ingredients</h4>
+        <ul>
             <li>20 Grams of coffee (pre grounded for pour over)</li>
             <li>300 ml of water</li>
             <li>Kettle for water</li>
@@ -18,7 +19,8 @@
             <li>Paper filter</li>
             <li>Scale</li>
         </ul>
-        <ol>Steps:
+        <h4>Steps</h4>
+        <ol>
             <li>Fill kettle with plenty of water, more than 300 ml, place on stove and heat until boiling</li>
             <li>Place filter in pour over tool, and place pour over tool on top of carafe</li>
             <li>Once water is heated, pour hot water into the pour over tool, saturate filter</li>
