--- a/recipes/espress.html
+++ b/recipes/espress.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Espresso</title>
+        <link rel="stylesheet" href="recipes.css">
     </head>
     <body>
         <h1>Espresso</h1>
