--- a/recipes/french-press.html
+++ b/recipes/french-press.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>French Press</title>
+        <link rel="stylesheet" href="recipes.css">
     </head>
     <body>
         <h1>French Press</h1>
