--- a/recipes/pour-over.html
+++ b/recipes/pour-over.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Pour over</title>
+        <link rel="stylesheet" href="recipes.css">
     </head>
     <body>
         <h1>Pour Over</h1>
